fix: update article date format for improved readability and enhance footer styles

--- a/src/components/blog-components/topics/Topics.css
+++ b/src/components/blog-components/topics/Topics.css
@@ -88,6 +88,5 @@
 
   .topic.all-button {
     max-width: 10rem;
-    margin-left: 2rem;
   }
 }
