--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 1.3rem;
   font-family: "Poppins", sans-serif;
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   background-color: var(--bg-header-footer);
   color: black;
 }
@@ -12,7 +12,8 @@
 .footer a {
   color: white;
   margin-left: 1rem;
-  font-size: 1.3rem;
+  margin-right: 1rem;
+  font-size: 1.5rem;
   transition: transform 0.3s ease;
 }
 
@@ -36,10 +37,12 @@ body.dark .footer {
     flex-direction: row;
     justify-content: space-between;
     padding: 1rem;
-    font-size: 0.9rem;
+    font-size: 1rem;
   }
 
   .footer a {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+    margin-left: 0.5rem;
+    margin-right: 0.9rem;
   }
 }
